CSS related SVG*Element changes doesn't require relayout https://bugs.webkit.org/show_bug.cgi?id=56906

Reviewed by Dirk Schulze.

Source/WebCore:

The changes of some CSS related SVGFilter properties e.g. lighting-color, flood-color, flood-opacity
need only repaint. To avoid the default invalidation of filters in SVGResourceCache::clientStyleChange()
we need an early return. So RenderSVGResourceFilterPrimitive::styleDidChange() can handle these properties
via RenderSVGResourceFilter::primitiveAttributeChanged() the same way like we do it for the other SVGAttributes.

Tests: svg/dynamic-updates/SVGFEDiffuseLightingElement-inherit-lighting-color-css-prop.html
       svg/dynamic-updates/SVGFEFloodElement-inherit-flood-color.html
       svg/dynamic-updates/SVGFESpecularLightingElement-inherit-lighting-color-css-prop.html
       svg/dynamic-updates/SVGFESpecularLightingElement-lighting-color-css-prop.html

* platform/graphics/filters/FEFlood.cpp:
(WebCore::FEFlood::setFloodColor):
(WebCore::FEFlood::setFloodOpacity):
* platform/graphics/filters/FEFlood.h:
* platform/graphics/filters/FESpecularLighting.cpp:
(WebCore::FESpecularLighting::setLightingColor):
* platform/graphics/filters/FESpecularLighting.h:
* rendering/svg/RenderSVGResourceFilterPrimitive.cpp:
(WebCore::RenderSVGResourceFilterPrimitive::styleDidChange):
* rendering/svg/RenderSVGResourceFilterPrimitive.h:
* rendering/svg/SVGResourcesCache.cpp:
(WebCore::SVGResourcesCache::clientStyleChanged):
* svg/SVGFEDiffuseLightingElement.cpp:
(WebCore::SVGFEDiffuseLightingElement::setFilterEffectAttribute):
* svg/SVGFEFloodElement.cpp:
(WebCore::SVGFEFloodElement::setFilterEffectAttribute):
* svg/SVGFEFloodElement.h:
* svg/SVGFESpecularLightingElement.cpp:
(WebCore::SVGFESpecularLightingElement::setFilterEffectAttribute):

LayoutTests:

Testing inherited CSS related SVG property changes by FEFlood, FESpecularLighting and FEDiffuseLighing filters.
Adding a missing test to check the dynamic update of lighting-color property of FESpecularLighting.
All the other modifications are covered by the existing dyanmic-update tests.

* platform/mac/svg/dynamic-updates/SVGFEDiffuseLightingElement-inherit-lighting-color-css-prop-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEDiffuseLightingElement-inherit-lighting-color-css-prop-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFEFloodElement-inherit-flood-color-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEFloodElement-inherit-flood-color-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFESpecularLightingElement-inherit-lighting-color-css-prop-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFESpecularLightingElement-inherit-lighting-color-css-prop-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFESpecularLightingElement-lighting-color-css-prop-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFESpecularLightingElement-lighting-color-css-prop-expected.png: Added.
* svg/dynamic-updates/SVGFEDiffuseLightingElement-inherit-lighting-color-css-prop-expected.txt: Added.
* svg/dynamic-updates/SVGFEDiffuseLightingElement-inherit-lighting-color-css-prop.html: Added.
* svg/dynamic-updates/SVGFEFloodElement-inherit-flood-color-expected.txt: Added.
* svg/dynamic-updates/SVGFEFloodElement-inherit-flood-color.html: Added.
* svg/dynamic-updates/SVGFESpecularLightingElement-inherit-lighting-color-css-prop-expected.txt: Added.
* svg/dynamic-updates/SVGFESpecularLightingElement-inherit-lighting-color-css-prop.html: Added.
* svg/dynamic-updates/SVGFESpecularLightingElement-lighting-color-css-prop-expected.txt: Added.
* svg/dynamic-updates/SVGFESpecularLightingElement-lighting-color-css-prop.html: Added.
* svg/dynamic-updates/script-tests/SVGFEDiffuseLightingElement-inherit-lighting-color-css-prop.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFEFloodElement-inherit-flood-color-css-prop.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFESpecularLightingElement-inherit-lighting-color-css-prop.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFESpecularLightingElement-lighting-color-css-prop.js: Added.
(executeTest):



Canonical link: https://commits.webkit.org/72362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82565 268f45cc-cd09-0410-ab3c-d52691b4dbfc