Source/WebCore/platform/graphics/filters/FEFlood.cpp
@@ -49,9 +49,12 @@ Color FEFlood::floodColor() const
     return m_floodColor;
 }
 
-void FEFlood::setFloodColor(const Color& color)
+bool FEFlood::setFloodColor(const Color& color)
 {
+    if (m_floodColor == color)
+        return false;
     m_floodColor = color;
+    return true;
 }
 
 float FEFlood::floodOpacity() const
@@ -59,9 +62,12 @@ float FEFlood::floodOpacity() const
     return m_floodOpacity;
 }
 
-void FEFlood::setFloodOpacity(float floodOpacity)
+bool FEFlood::setFloodOpacity(float floodOpacity)
 {
+    if (m_floodOpacity == floodOpacity)
+        return false;
     m_floodOpacity = floodOpacity;
+    return true;
 }
 
 void FEFlood::apply()
